--- a/src/aui-form-builder/assets/aui-form-builder-field-core.css
+++ b/src/aui-form-builder/assets/aui-form-builder-field-core.css
@@ -3,13 +3,12 @@
     padding: 0;
 }
 
-.form-builder-field .field-checkbox, .form-builder-field .field-radio {
-    float: left;
-    margin-right: 5px;
-}
-
 .form-builder-field .btn-toolbar {
     position: absolute;
     right: 10px;
     top: 10px;
+}
+
+.form-builder-field .radio {
+	clear: both;
 }
