AUI-1545 - Source Formatting

--- a/src/aui-form-builder/assets/skins/sam/aui-form-builder-field-skin.css
+++ b/src/aui-form-builder/assets/skins/sam/aui-form-builder-field-skin.css
@@ -25,6 +25,10 @@
     border-color: #ccc;
 }
 
+.form-builder-field-options-container {
+    clear: left;
+}
+
 .form-builder-field-selected {
     border-color: #76a7fa;
 }
